<resources>
    <string name="app_name">projectDanhBa_20135557</string>
    <string name="app_title">Danh Bạ</string>
    <string name="trang_chu">Tranng chủ</string>
    <string name="btn_action_ok">OK</string>
    <string name="btn_action_cancel">Cancel</string>
    <string name="btn_action_add">Thêm mới</string>
    <string name="btn_action_search">Tìm kiếm</string>
    <string name="btn_action_settings">Cài đặt</string>
    <string name="like">Thích</string>
    <string name="btn_action_unlike">Bỏ thích</string>
    <string name="add_new_contact">Thêm liên hệ mới trong danh bạ</string>
    <string name="search_contact">Tìm kiếm liên hệ</string>
    <string name="create_contact">Tạo liên hệ mới</string>
    <string name="first_name">Họ</string>
    <string name="last_name">Tên</string>
    <string name="full_name">Họ và tên</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="group">Nhóm</string>
</resources>
